--- a/locales/en.json
+++ b/locales/en.json
@@ -11,7 +11,7 @@
   "reset": "Configuration reset to default.",
   "adminmsg": "Message from Admin:\n\n",
   "iv": "with IV: ",
-  "time": "Rremains until ",
+  "time": "Remains until ",
   "attack": "Attack: ",
   "defense": "Defense: ",
   "stamina": "Stamina: ",
