Minor text fixes

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,22 +1,22 @@
 {
-  "helptext": "Hier kannst du festlegen zu welchen Pokémon du eine Benachrichtigung möchtest.\n\n/add = Pokémon hinzufügen\n/remove = Pokémon entfernen\n/list = Pokémon auflisten\n/reset = Einstellungen zurücksetzen\n/stop = Chat beenden\n/help = Dieses Menü\n/iv = Setzen des Wertes ab welchem IV-Wert du über dieses Pokémon benachrichtigt werden möchtest.\n\nWenn du mehrere Pokémon hinzufügen oder löschen möchtest, trenne diese mit einem ','.\n\nEin Beispiel:\n\n/add Glumanda, Glurak\n/iv 80 Taubsi,Glurak",
+  "helptext": "Hier kannst du festlegen zu welchen Pokémon du eine Benachrichtigung möchtest.\n\n/add = Pokémon hinzufügen\n/remove = Pokémon entfernen\n/list = Pokémon auflisten\n/reset = Einstellungen zurücksetzen\n/stop = Chat beenden\n/help = Dieses Menü\n/iv = Setzen des minimum IV-Wert's ab welchem du über dieses Pokémon benachrichtigt werden möchtest.\n\nWenn du mehrere Pokémon hinzufügen oder löschen möchtest, trenne diese mit einem ','.\n\nEin Beispiel:\n\n/add Glumanda, Glurak\n/iv 80 Taubsi,Glurak",
   "welcome": "Willkommen beim Pokémonbot. Mit diesem Bot kannst du deine Wunschbenachrichtigung selbst einstellen. Zu folgenden Pokémon erhälst du zurzeit eine Benachrichtigung:\n\n",
   "welcomeback": "Willkommen zurück.\nDeine vorherigen Einstellungen sind noch immer vorhanden.",
   "botalredystarted": "Du hast den Bot bereits gestartet",
   "stopped": "Du wirst nun nicht mehr benachrichtigt. Mit /start kannst du den Bot erneut starten.",
   "botalredystopped": "Du hast den Bot bereits gestoppt.",
-  "added": "zu Benachrichtigung hinzugefügt.",
-  "removed": "von Benachrichtigung entfernt.",
-  "replylist": "Zu folgenden Pokémon erhälst du eine Benachrichtigung:\n",
+  "added": "\nZu Benachrichtigungen hinzugefügt.",
+  "removed": "\nVon Benachrichtigungen entfernt.",
+  "replylist": "Zu folgenden Pokémon erhälst du Benachrichtigungen:\n\n",
   "reset": "Alle Einstellungen wurden zurückgesetzt.",
   "adminmsg": "Nachricht vom Admin:\n\n",
   "iv": "mit IV: ",
-  "time": "Bleibt noch bis ",
+  "time": "Verfügbar bis: ",
   "attack": "Angriff: ",
   "defense": "Verteidigung: ",
   "stamina": "Ausdauer: ",
   "hit1": "Attacke 1: ",
   "hit2": "Attacke 2: ",
-  "setiv": "wurde als minimum IV-Wert gesetzt. ",
+  "setiv": "wurde als minimum IV-Wert gesetzt.",
   "erroriv": "Der Wert muss eine Zahl sein und zwischen 1 und 100 liegen."
 }
