--- a/locales/en.json
+++ b/locales/en.json
@@ -1,22 +1,22 @@
 {
-  "helptext": "You can choose for which Pokémon you want to be notified.\n\n/add = Add Pokémon to notifiy list\n/remove = Remove Pokémon from notify list\n/list = List Pokémon on notify list\n/reset = Reset configuration\n/stop = Stop chat\n/help = This menu\n\nIf you want to add more than one Pokémon to the list, use the ',' seperator.\n\nExample:\n\n /add Glumanda, Glurak\n",
+  "helptext": "You can choose for which Pokémon you want to be notified.\n\n/add = Add Pokémon to notifiy list\n/remove = Remove Pokémon from notify list\n/list = List Pokémon on notify list\n/reset = Reset configuration\n/stop = Stop chat\n/help = This menu\n/iv = Set minimum IV-Value for a Pokémon you want to be notified about.\n\nIf you want to add more than one Pokémon to the list, use the ',' seperator.\n\nExample:\n\n /add Glumanda, Glurak\n",
   "welcome": "Welcome to Pokémonbot. This bot allows you to configure notifications for Pokémon you like. You receive notification for the following Pokémon:\n\n",
   "welcomeback": "Welcome back.\nYour configuration is still active.",
   "botalredystarted": "You already started the bot.",
   "stopped": "You are not notified anymore. Restart the bot with /start.",
   "botalredystopped": "You already stopped the bot",
-  "added": "added to notify list.",
-  "removed": "removed to notify list.",
-  "replylist": "You receive notifications for the following Pokémon:\n",
+  "added": "\nAdded to notify list.",
+  "removed": "\nRemoved from notify list.",
+  "replylist": "You receive notifications for the following Pokémon:\n\n",
   "reset": "Configuration reset to default.",
   "adminmsg": "Message from Admin:\n\n",
   "iv": "with IV: ",
-  "time": "Remains until ",
+  "time": "Remains until: ",
   "attack": "Attack: ",
   "defense": "Defense: ",
   "stamina": "Stamina: ",
   "hit1": "Attack 1: ",
   "hit2": "Attack 2: ",
-  "setiv": "as minimum IV-Value set.",
-  "erroriv": "Value has to be a number between 1 and 100."
+  "setiv": "set as minimum IV-Value.",
+  "erroriv": "Value has to be numeric and between 1 and 100."
 }
