--- a/locales/en.json
+++ b/locales/en.json
@@ -18,5 +18,7 @@
   "hit1": "Attack 1: ",
   "hit2": "Attack 2: ",
   "setiv": "set as minimum IV-Value.",
-  "erroriv": "Value has to be numeric and between 1 and 100."
+  "erroriv": "Value has to be numeric and between 1 and 100.",
+  "addquestion": "Which Pokémon do you want to add?",
+  "removequestion": "Which Pokémon do you want to remove?"
 }
