--- a/locales/de.json
+++ b/locales/de.json
@@ -7,18 +7,17 @@
   "botalredystopped": "Du hast den Bot bereits gestoppt.",
   "added": "\nZu Benachrichtigungen hinzugefügt.",
   "removed": "\nVon Benachrichtigungen entfernt.",
-  "replylist": "Zu folgenden Pokémon erhälst du Benachrichtigungen:\n\n",
+  "replylist": "Zu folgenden Pokémon erhälst du Benachrichtigungen:\n\n{list}",
   "reset": "Alle Einstellungen wurden zurückgesetzt.",
-  "adminmsg": "Nachricht vom Admin:\n\n",
-  "iv": "mit IV: ",
-  "time": "Verfügbar bis: ",
-  "attack": "Angriff: ",
-  "defense": "Verteidigung: ",
-  "stamina": "Ausdauer: ",
-  "hit1": "Attacke 1: ",
-  "hit2": "Attacke 2: ",
-  "setiv": "wurde als minimum IV-Wert gesetzt.",
+  "adminmsg": "Nachricht vom Admin:\n\n{message}",
+  "iv": "mit IV: *{iv}%*\n",
+  "time": "Verfügbar bis: {time} ({countdown})",
+  "ivsplit": "Angriff: {attack} / Verteidigung: {defense} / Ausdauer: {stamina}\n\n",
+  "hit1": "Attacke 1: {name} ({wert})\n",
+  "hit2": "Attacke 2: {name} ({wert})\n\n",
+  "setiv": "{iv}% wurde als minimum IV-Wert gesetzt.",
   "erroriv": "Der Wert muss eine Zahl sein und zwischen 1 und 100 liegen.",
   "addquestion": "Welches Pokémon willst du hinzufügen?",
-  "removequestion": "Welches Pokémon willst du entfernen?"
+  "removequestion": "Welches Pokémon willst du entfernen?",
+  "selectivpokemon": "Wähle die Pokémons aus bei denen du den IV-Wert auf {iv}% setzen möchtest."
 }
