--- a/locales/de.json
+++ b/locales/de.json
@@ -5,12 +5,12 @@
   "botalredystarted": "Du hast den Bot bereits gestartet",
   "stopped": "Du wirst nun nicht mehr benachrichtigt. Mit /start kannst du den Bot erneut starten.",
   "botalredystopped": "Du hast den Bot bereits gestoppt.",
-  "added": "\nZu Benachrichtigungen hinzugefügt.",
-  "removed": "\nVon Benachrichtigungen entfernt.",
+  "added": "Zu Benachrichtigungen hinzugefügt.",
+  "removed": "Von Benachrichtigungen entfernt.",
   "replylist": "Zu folgenden Pokémon erhälst du Benachrichtigungen:\n\n{list}",
   "reset": "Alle Einstellungen wurden zurückgesetzt.",
   "adminmsg": "Nachricht vom Admin:\n\n{message}",
-  "iv": "IV: *{iv}%*\n",
+  "iv": "mit IV: *{iv}%*\n",
   "time": "Verfügbar bis: {time} ({countdown})",
   "ivsplit": "Angriff: {attack} / Verteidigung: {defense} / Ausdauer: {stamina}\n\n",
   "hit1": "Attacke 1: {name} ({wert})\n",
