--- a/locales/en.json
+++ b/locales/en.json
@@ -5,12 +5,12 @@
   "botalredystarted": "You already started the bot.",
   "stopped": "You are not notified anymore. Restart the bot with /start.",
   "botalredystopped": "You already stopped the bot",
-  "added": "\nAdded to notify list.",
-  "removed": "\nRemoved from notify list.",
+  "added": "Added to notify list.",
+  "removed": "Removed from notify list.",
   "replylist": "You receive notifications for the following Pokémon:\n\n{list}",
   "reset": "Configuration reset to default.",
   "adminmsg": "Message from Admin:\n\n{message}",
-  "iv": "IV: *{iv}%*\n",
+  "iv": "with IV: *{iv}%*\n",
   "time": "Remains until: {time} ({countdown})",
   "ivsplit": "Attack: {attack} / Defense: {defense} / Stamina: {stamina}\n\n",
   "hit1": "Attack 1: {name} ({wert})\n",
