Adminhelp and Groupcreate fixed

--- a/locales/de.json
+++ b/locales/de.json
@@ -21,5 +21,6 @@
   "removequestion": "Welches Pokémon willst du entfernen?",
   "selectivpokemon": "Wähle die Pokémons aus bei denen du den IV-Wert auf {iv}% setzen möchtest.",
   "groupidexists": "Die Gruppen mit der ID *{id}* existiert bereits",
-  "groupadded": "Die Gruppe *{id}* mit dem Alias *{alias}* wurde hinzugefügt und dem Ort *{place}* zugewiessen."
+  "groupadded": "Die Gruppe *{id}* mit dem Alias *{alias}* wurde hinzugefügt und dem Ort *{place}* zugewiessen.",
+  "adminhelp": "Folgende Befehle stehen dir zur verfügung:\n/send = Nachricht an alle Gruppen und User schicken.\n/groupadd = Gruppe hinzufügen\n\nBeispiel:\n/groupadd @gruppenid gruppenalias"
 }
