Fix admin command

--- a/locales/de.json
+++ b/locales/de.json
@@ -22,5 +22,5 @@
   "selectivpokemon": "Wähle die Pokémons aus bei denen du den IV-Wert auf {iv}% setzen möchtest.",
   "groupidexists": "Die Gruppen mit der ID *{id}* existiert bereits",
   "groupadded": "Die Gruppe *{id}* mit dem Alias *{alias}* wurde hinzugefügt und dem Ort *{place}* zugewiessen.",
-  "adminhelp": "Folgende Befehle stehen dir zur verfügung:\n/send = Nachricht an alle Gruppen und User schicken.\n/groupadd = Gruppe hinzufügen\n\nBeispiel:\n/groupadd @gruppenid gruppenalias"
+  "adminhelp": "Folgende Befehle stehen dir zur verfügung:\n/send = Nachricht an alle Gruppen und User schicken.\n/groupcreate = Gruppe hinzufügen\n\nBeispiel:\n/groupcreate @gruppenid gruppenalias"
 }
