--- a/locales/en.json
+++ b/locales/en.json
@@ -13,8 +13,8 @@
   "iv": "with IV: *{iv}%*\n",
   "time": "Remains until: {time} ({countdown})",
   "ivsplit": "Attack: {attack} / Defense: {defense} / Stamina: {stamina}\n\n",
-  "hit1": "Attack 1: {name} ({wert})\n",
-  "hit2": "Attack 2: {name} ({wert})\n\n",
+  "hit1": "Attack 1: {name}\n",
+  "hit2": "Attack 2: {name}\n\n",
   "setiv": "{iv}% set as minimum IV-Value.",
   "erroriv": "Value has to be numeric and between 1 and 100.",
   "addquestion": "Which Pokémon do you want to add?",
