--- a/locales/de.json
+++ b/locales/de.json
@@ -19,5 +19,10 @@
   "erroriv": "Der Wert muss eine Zahl sein und zwischen 1 und 100 liegen.",
   "addquestion": "Welches Pokémon willst du hinzufügen?",
   "removequestion": "Welches Pokémon willst du entfernen?",
-  "selectivpokemon": "Wähle die Pokémons aus bei denen du den IV-Wert auf {iv}% setzen möchtest."
+  "selectivpokemon": "Wähle die Pokémons aus bei denen du den IV-Wert auf {iv}% setzen möchtest.",
+  "selectiv": "Welchen IV Wert möchtest du für das Pokémon setzen?",
+  "addquestiongen": "Aus welcher Generation möchtest du die Pokémon auswählen?",
+  "removequestiongen": "Aus welcher Generation möchtest du die Pokémon auswählen?",
+  "setplace": "Der Standort *{place}* ist nun gesetzt.",
+  "selectplace": "Welchen Standort möchtest du setzen?"
   }
